--- a/css/styles.css
+++ b/css/styles.css
@@ -27,14 +27,35 @@ body * {
     border: 1px solid red;
 } */
 
+header {
+    padding-top: 30px;
+    /* text-align: center; */
+}
+
+header div {
+    width: 120px;
+    margin: auto;
+    background-image:linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    border-radius: 50%;
+    display: flex;
+    padding: 4px;
+}
+
+header div img {
+    width: 100%;
+    border-radius: 50%;
+    
+}
+
+
 main{
     max-width: 580px;
     width: 90%;
-    margin: auto;
+    margin: 32px auto;
     display: flex;
     flex-direction: column;
     gap: 24px;
-    margin-top: 32px;
+    /* margin-top: 32px; */
 
 }
 
@@ -81,5 +102,6 @@ section ul {
 .channel-list img {
     width: 70px;
     border-radius: 50%;
+    border: 1px solid #443E54;
 
 }
