--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body * {
 
 header {
     padding-top: 30px;
+    height: calc(120px + 32px);
     /* text-align: center; */
 }
 
@@ -122,4 +123,54 @@ section ul li:hover {
     border-radius: 50%;
     border: 1px solid #443E54;
 
+}
+
+
+/* Animação */
+
+header div{
+    animation: fromTop .7s backwards;
+    animation-delay: 1s;
+
+}
+
+
+main section {
+    animation: fromBottom .7s backwards;
+}
+
+
+main section:nth-child(1){
+    animation-delay: 0;
+
+}
+main section:nth-child(2){
+    animation-delay: .3s;
+}
+main section:nth-child(3){
+    animation-delay: .5s;
+}
+
+@keyframes fromTop {
+    from {
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fromBottom {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
