--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,11 @@ ul {
 }
 
 body {
-    /* background-image: url(../assets/bg2.png); */
+    /* background-image: url(../assets/bg3.jpg); */
     background-position: top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
-    background-color: #121214;
+    background-color: #262626;
 }
 
 body * {
@@ -36,7 +36,7 @@ header {
 header div {
     width: 120px;
     margin: auto;
-    background-image:linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    background-image:linear-gradient(90deg, #DAFDBA 0%, #45C4B0 50.52%, #13678A 100%);
     border-radius: 50%;
     display: flex;
     padding: 4px;
@@ -69,7 +69,7 @@ main{
 
 section {
     color: white;
-    background-image:linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    background-image:linear-gradient(90deg, #F2E635 0%, #F2BE22 50.52%, #F26E22 100%);
     padding-top: 4px;
     border-radius: 10px;
 
@@ -126,29 +126,33 @@ section ul li:hover {
 }
 
 
+
+
 /* Animação */
 
 header div{
     animation: fromTop .7s backwards;
-    animation-delay: 1s;
+    animation-delay: .1s;
 
 }
 
 
 main section {
-    animation: fromBottom .7s backwards;
+    animation: fromTop .7s backwards;
+    animation-delay: .3s;
 }
 
 
 main section:nth-child(1){
-    animation-delay: 0;
+    animation-delay: .5s;
+    
 
 }
 main section:nth-child(2){
-    animation-delay: .3s;
+    animation-delay: .7s;
 }
 main section:nth-child(3){
-    animation-delay: .5s;
+    animation-delay: .9s;
 }
 
 @keyframes fromTop {
@@ -166,7 +170,7 @@ main section:nth-child(3){
 @keyframes fromBottom {
     from {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(-30px);
     }
 
     to{
